Export data table to CSV file

--- a/ExportUI/src/org/mongkie/ui/exporter/Bundle_es.properties
+++ b/ExportUI/src/org/mongkie/ui/exporter/Bundle_es.properties
@@ -1,2 +1,3 @@
-GraphExportSettingUI.labelSelectedOnly.text=Exportar solamente el grafo visualizado actualmente
-GraphExportSettingUI.labelFullGraph.text=Exportar el grafo completo
+
+GraphExportGlobalSettingUI.labelSelectedOnly.text=Exportar solamente el grafo visualizado actualmente
+GraphExportGlobalSettingUI.labelFullGraph.text=Exportar el grafo completo
