--- a/ExportUI/src/org/mongkie/ui/exporter/Bundle_fr.properties
+++ b/ExportUI/src/org/mongkie/ui/exporter/Bundle_fr.properties
@@ -1,2 +1,3 @@
-GraphExportSettingUI.labelSelectedOnly.text=Seul le graphe visible est export\u00e9
-GraphExportSettingUI.labelFullGraph.text=Le graphe complet est export\u00e9
+
+GraphExportGlobalSettingUI.labelSelectedOnly.text=Seul le graphe visible est export\u00e9
+GraphExportGlobalSettingUI.labelFullGraph.text=Le graphe complet est export\u00e9
