Exporter global settings located in the bottom of the file chooser dialog

--- a/ExportUI/src/org/mongkie/ui/exporter/Bundle_es.properties
+++ b/ExportUI/src/org/mongkie/ui/exporter/Bundle_es.properties
@@ -1,3 +1,2 @@
-
-GraphExportGlobalSettingUI.labelSelectedOnly.text=Exportar solamente el grafo visualizado actualmente
-GraphExportGlobalSettingUI.labelFullGraph.text=Exportar el grafo completo
+GraphExportGlobalSettingUI.labelSelectionOnly.text=Exportar solamente el grafo visualizado actualmente
+GraphExportGlobalSettingUI.labelExportAll.text=Exportar el grafo completo
