--- a/ExportUI/src/org/mongkie/ui/exporter/Bundle_fr.properties
+++ b/ExportUI/src/org/mongkie/ui/exporter/Bundle_fr.properties
@@ -1,3 +1,2 @@
-
-GraphExportGlobalSettingUI.labelSelectedOnly.text=Seul le graphe visible est export\u00e9
-GraphExportGlobalSettingUI.labelFullGraph.text=Le graphe complet est export\u00e9
+GraphExportGlobalSettingUI.labelSelectionOnly.text=Seul le graphe visible est export\u00e9
+GraphExportGlobalSettingUI.labelExportAll.text=Le graphe complet est export\u00e9
